e randr x - fix mouseto use new ecore x api to force screen bound limits
use ecore_x_root_screen_barriers_set() new in efl git, thus bumping to
1.23.99 as a requirement for e.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 TODO:
+* pointer: bug: sometiems get sstuck in move/resize modfe if mouse
+  over move/resize area when desklock kicks in
 * clipboard manager - monitor clipboard changes + history + select from it
 * scriptlets: stdin/out module that provides gui services to some
   back-end script or process where e just talks via stdin/out.
