todo - add notes for ddcutil

--- a/TODO
+++ b/TODO
@@ -185,9 +185,11 @@ TODO:
   * can go back in time then to previous logs
   * should have the ability to draw nice graphs etc.
 * brightness/contrast etc. controls need to work better
-  look at ddcutil (ddc capabilities, ddc getvcp/setvcp) to be able to
+  look at ddcutil (ddcutil capabilities, ddcutil getvcp/setvcp) to be able to
   control screen brightness, rgb gain, display technology type,
   display modes, color presets etc. etc. http://www.ddcutil.com
+  n.b.: modprobe i2c-dev ...
+  n.b.: use --edid 00fffff....90b020304... to control specific mon
 * edge bindings - selecting edge dialog needs a redo (no edje for all content)
 * e menu - add obj cache for menu and menu item objects to reduce costs
   by far the biggest cost in showing/hiding menus is realize/unrealize
