todo++ - add winlist miniatures todo's

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 TODO:
+* winlist - add window miniatures to list mode
+* winlist - add grid mode with miniatures
+* winlist - add exposé like 2d layout of windows with miniatures
 * wifi/bt net: associate app/desktop(s) or actions to run when:
   * bt device comes or goes (alongside lock device feature)
   * wifi appears or disappears
