e - wallpaper gen - generate multiple resolutions for wallpapers
pre-scale a bunch of resolutions for generated wallpaper files that
intersect with common resolution sizes so e will automatically load
the nearest resolution to be more efficient on load to only decode
what is needed. a bi-product is that e now has a wallapper gen
tool that is simpler than writing your own edc files... :)

@feature

--- a/TODO
+++ b/TODO
@@ -119,9 +119,8 @@ TODO:
     * set user password
     * user cron front-end config/editor
     * allow separate LC_MESSAGES, LC_TIME, LC_NUMERIC, LC_NAME, etc.
-* wallpaper: gen wp files with multiple common resolutions in image set
-  * edje needs logic to handle max texture size and to downsize to work
-    * rpi max texture size is 2048...
+* edje needs logic to handle max texture size to fix big img problems
+  * rpi max texture size is 2048...
 * dnd: remove e_dnd and use elm's dnd instead
 * new gadgets:
   * be able to move, resize etc. without alt move/resize mode like old)
