--- a/TODO
+++ b/TODO
@@ -6,7 +6,8 @@ TODO:
   * bt device comes or goes (alongside lock device feature)
   * wifi appears or disappears
   * wifi or wired network connected or disconnected to/from
-* pointer: bug: sometiems get sstuck in move/resize modfe if mouse
+  * perhaps need a more generic "events" bindings and these are events?
+* pointer: bug: sometiems gets stuck in move/resize modfe if mouse
   over move/resize area when desklock kicks in
 * clipboard manager - monitor clipboard changes + history + select from it
 * scriptlets: stdin/out module that provides gui services to some
@@ -119,8 +120,6 @@ TODO:
     * set user password
     * user cron front-end config/editor
     * allow separate LC_MESSAGES, LC_TIME, LC_NUMERIC, LC_NAME, etc.
-* edje needs logic to handle max texture size to fix big img problems
-  * rpi max texture size is 2048...
 * dnd: remove e_dnd and use elm's dnd instead
 * new gadgets:
   * be able to move, resize etc. without alt move/resize mode like old)
@@ -231,8 +230,6 @@ TODO:
   * split e up into front vs back-end with back-end doing things like
     * monitoring processes/system (see above)
     * launching apps (cheaper to fork a small process)
-    * having a root helper for root-only tasks that stays around if it
-      is needed as opposed to enlightenment_sys that runs then exits
 * synergy-like e <-> e mouse, kbd, cnp, dnd proxy/sharing
 * cpufreq - move to config dialog for settings
   * set governor for ac vs battery (or powerstate levels)
