--- a/TODO
+++ b/TODO
@@ -1,4 +1,15 @@
 TODO:
+* pam/auth - exotic auth things like fingerprint readers etc. need to work
+  * fingerprint
+  * smart card
+  * face auth (howdy / pam-face / pam-face-authentication / pam-facial-auth)
+  * yubikey
+  * usb drive (pam_usb)
+  * support setting up fingerprint as auth (fprint)
+  * support settign up smartcard as auth
+  * support setting up face auth (howdy / pam-face / pam-face-authentication / pam-facial-auth)
+  * support setting up yubikey as auth
+  * support setting up usb drive for auth (pam_usb)
 * winlist - add window miniatures to list mode
 * winlist - add grid mode with miniatures
 * winlist - add exposé like 2d layout of windows with miniatures
