--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 TODO:
+* mixer: if pulseaudio is not there - try run it
 * action to switch config profiles so it can be bound
 * clean up some old actions that are handled better by newer ones
   * like suspend intelligently is better than regular suspend but
