AUTHORS: Add jf_simon to list.
:) Loads of commits recently !

--- a/AUTHORS
+++ b/AUTHORS
@@ -61,3 +61,4 @@ bu5hm4n (Marcel Hollerbach) <marcel-hollerbach@t-online.de>
 simotek (Simon Lees) <simon@simotek.net>
 Derek Foreman <derekf@osg.samsung.com>
 netstar (Alastair Poole) <netstar@gmail.com>
+jf_simon (Simon Tischer) <simon@t-tischer.de>
