e_shelf: Improve auto hide behaviour.
Improve auto hide behaviour. Allow the user to re-enter an
auto-hiding shelf as many times as he/she likes. This fixes the
issue where hovering back onto such a configured shelf causes
the shelf to hide and then animate.

This needs to move to edje. As per the TODO task.

--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@ TODO:
     * winlist should do the switching with another layout mode...
   * shelf can expamnd/slow down to show more (indicator/notification)
     * gadget bar too... ? or just gad bar?
+  * shelf autohide. Move this to edje.
   * vkbd integrates with proper sizing and layout
     * manual show/hide with various controls (actions, swipes, gadget)
   * finger friendly desklock
